# office-notice

./: .gitignore  Cargo.toml  README.md  subscription.json  users.json
assets/: links.json  subscription.json  user-roles.json  users.json
docker/: Dockerfile  docker-compose.yaml
python/: members.json
rust/: .gitignore  Cargo.toml  config.yaml  links.json  subscription.json  users.json
rust/src/: callback.rs  db.rs  environment.rs  general.rs  links.rs  loc.rs  main.rs  menu.rs  navigation.rs  notice.rs  states.rs  subscribe.rs  subscription.rs  user.rs
rust/src/config/: mod.rs
rust/src/locales/: en.json
src/: .gitignore  bot.info  callback.rs  db.rs  general.rs  help.rs  links.rs  loc.rs  main.py  main.rs  menu.rs  message.rs  notice.py  notice.rs  request_access.rs  states.rs  subscribe.rs  user.rs
src/config/: mod.rs
src/depricated/: callback.rs  environment.rs
src/kernel/: error.rs
src/locales/: ru.json
src/subscribe/: subscribe.rs  subscription.rs
src/user/: grant_access.rs  request_access.rs  user.rs  user_role.rs
