[package]
name = "office-notice"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^0.4"
pretty_env_logger = "0.5"

tokio = { version =  "1.40", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.13", features = ["macros"] }

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"


lazy_static = "^1.5"
once_cell = "1.17.1"
chrono = "^0.4"
futures = "^0.3"
strum = { version = "0.26.0", features = ["derive"] }
derive_more = { version = "^1.0", features = [ "from" ]}
arraylib = "^0.3"
reqwest = "^0.12"
indexmap = { version = "^2.2", features = ["serde"] }

[build]
rustflags = ["-Clinker=rust-lld"]
