[package]
name = "office-notice"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12", features = ["macros"] }

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"


lazy_static = "1.5.0"
once_cell = "1.17.1"
chrono = "0.4.24"
futures = "0.3.28"
strum = { version = "0.25.0", features = ["derive"] }
derive_more = "0.99.17"
